UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Market_Segment_Type__c.field-meta.xml
<CustomField>
    <fullName>Market_Segment_Type__c</fullName>
    <description>Customer size and type</description>
    <label>Market Segment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>SOHO</fullName>
            </value>
            <value>
                <fullName>Carrier</fullName>
            </value>
            <value>
                <fullName>CO OFF</fullName>
            </value>
            <value>
                <fullName>Paystation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>