UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Marketing_Source_Group__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Source_Group__c</fullName>
    <label>Marketing Source / Group</label>
    <length>250</length>
    <type>Text</type>
</CustomField>