UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Marketo_ID__c.field-meta.xml
<CustomField>
    <fullName>Marketo_ID__c</fullName>
    <label>Marketo ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>