UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Marketo_Integration_Key__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Integration_Key__c</fullName>
    <description>Marketo Integration Key</description>
    <externalId>true</externalId>
    <inlineHelpText>Marketo Integration Key</inlineHelpText>
    <label>Marketo Integration Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>