UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Max_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_Contract_End_Date__c</fullName>
    <description>Date Contract Will Expire</description>
    <label>Max Contract End Date</label>
    <type>Date</type>
</CustomField>