UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Metro_E_Index__c.field-meta.xml
<CustomField>
    <fullName>Metro_E_Index__c</fullName>
    <label>Metro E Index</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>