UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/metroInternet__c.field-meta.xml
<CustomField>
    <fullName>metroInternet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Metro Internet</label>
    <type>Checkbox</type>
</CustomField>