UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/mkto71_Acquisition_Program__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Acquisition_Program__c</fullName>
    <description>Marketo program that the lead was acquired in.</description>
    <label>Acquisition Program (Marketo)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>