UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/mkto71_Acquisition_Program_Id__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Acquisition_Program_Id__c</fullName>
    <description>The marketo Program the lead was acquired in.</description>
    <label>Acquisition Program Id (Marketo)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>