UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/mkto71_Inferred_Country__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Inferred_Country__c</fullName>
    <label>Inferred Country (Marketo)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>