UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/mkto71_Inferred_Phone_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Inferred_Phone_Area_Code__c</fullName>
    <label>Inferred Phone Area Code (Marketo)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>