UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/mkto71_Original_Search_Engine__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Original_Search_Engine__c</fullName>
    <label>Original Search Engine (Marketo)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>