UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/mkto71_Original_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Original_Source_Type__c</fullName>
    <label>Original Source Type (Marketo)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>