UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/MQO_SAO_Disposition_Code__c.field-meta.xml
<CustomField>
    <fullName>MQO_SAO_Disposition_Code__c</fullName>
    <label>SAO Disposition Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer need disappears</fullName>
            </value>
            <value>
                <fullName>Customer need changes</fullName>
            </value>
            <value>
                <fullName>Customer BDT changes</fullName>
            </value>
            <value>
                <fullName>Lack of access to decision makers</fullName>
            </value>
            <value>
                <fullName>Entrenched competitor</fullName>
            </value>
            <value>
                <fullName>Already engaged/duplicate</fullName>
            </value>
            <value>
                <fullName>Does not meet Sales-ready criteria</fullName>
            </value>
            <value>
                <fullName>Mis-assigned</fullName>
            </value>
            <value>
                <fullName>Unable to reach contact</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not in GEO purchasing area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>