UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/MRR_Potential__c.field-meta.xml
<CustomField>
    <fullName>MRR_Potential__c</fullName>
    <label>MRR Potential</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>