UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/MTU_Industry__c.field-meta.xml
<CustomField>
    <fullName>MTU_Industry__c</fullName>
    <label>MTU Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MTU - Industrial property</fullName>
            </value>
            <value>
                <fullName>MTU - Retail property</fullName>
            </value>
            <value>
                <fullName>Ag/Construction</fullName>
            </value>
            <value>
                <fullName>Manuf/Trans</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Prof Svcs</fullName>
            </value>
            <value>
                <fullName>Real Est/Health</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>
 