UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/multiPhone__c.field-meta.xml
<CustomField>
    <fullName>multiPhone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi Phone</label>
    <type>Checkbox</type>
</CustomField>