UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Nationwide_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Nationwide_Indicator__c</fullName>
    <label>Nationwide Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>