UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Network_Speed__c.field-meta.xml
<CustomField>
    <fullName>Network_Speed__c</fullName>
    <description>Assessment Question - Is network speed meeting needs</description>
    <label>Network Speed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not meeting needs</fullName>
            </value>
            <value>
                <fullName>Meeting needs but no growth</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>