UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Network_Type__c.field-meta.xml
<CustomField>
    <fullName>Network_Type__c</fullName>
    <description>Network Type picklist value</description>
    <label>Network Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fios/Fiber</fullName>
            </value>
            <value>
                <fullName>Copper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>