UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Node_City__c.field-meta.xml
<CustomField>
    <fullName>Node_City__c</fullName>
    <label>Node City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>