UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Node_Distance__c.field-meta.xml
<CustomField>
    <fullName>Node_Distance__c</fullName>
    <label>Node Distance</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>