UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Number_of_Attempts_on_date__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Attempts_on_date__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Number of Attempts on date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>