UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Number_of_UCaaS_users__c.field-meta.xml
<CustomField>
    <fullName>Number_of_UCaaS_users__c</fullName>
    <label>Number of UCaaS Users</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>