UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Number_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Units__c</fullName>
    <description>ClearLink Number of Units Field</description>
    <label>Number of Units</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>