UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/numberOfLocations__c.field-meta.xml
<CustomField>
    <fullName>numberOfLocations__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number Of Locations</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>