UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/of_Business_Days_After_Assignment__c.field-meta.xml
<CustomField>
    <fullName>of_Business_Days_After_Assignment__c</fullName>
    <formula>(5*( FLOOR( ( Today() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Today() - DATE( 1900, 1, 8), 7 ) ) )-(5 * ( FLOOR( ( Lead_Owner_Assignment_Date__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Lead_Owner_Assignment_Date__c - DATE( 1900, 1, 8), 7 ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Business Days After Assignment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>