UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/ONT_PON__c.field-meta.xml
<CustomField>
    <fullName>ONT_PON__c</fullName>
    <description>SMB ONT_PON</description>
    <label>ONT PON</label>
    <length>255</length>
    <type>Text</type>
</CustomField>