UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Open_to_receiving_a_call_from_a__c.field-meta.xml
<CustomField>
    <fullName>Open_to_receiving_a_call_from_a__c</fullName>
    <label>Open to receiving a call from a</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>