UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Other SMB</description>
    <label>Other</label>
    <type>Checkbox</type>
</CustomField>