UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Other_Currency__c.field-meta.xml
<CustomField>
    <fullName>Other_Currency__c</fullName>
    <description>Other Currency</description>
    <label>Other MRC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>