UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Other_QTY__c.field-meta.xml
<CustomField>
    <fullName>Other_QTY__c</fullName>
    <description>Frontier Secure QTY SMB</description>
    <label>Other QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>