UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/OTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>OTM_Campaign__c</fullName>
    <label>OTM Campaign</label>
    <length>75</length>
    <type>Text</type>
</CustomField>