UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Owner_Managers_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_Managers_Email__c</fullName>
    <formula>Owner:User.Manager_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Managers Email</label>
    <type>Text</type>
</CustomField>