UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Owner_of_Management_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_of_Management_Company_Name__c</fullName>
    <description>ClearLink Owner of Management Company Name Field</description>
    <label>Owner of Management Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>