UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Owner_Status__c.field-meta.xml
<CustomField>
    <fullName>Owner_Status__c</fullName>
    <formula>Owner:User.Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Status</label>
    <type>Checkbox</type>
</CustomField>