UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/OwnersManager__c.field-meta.xml
<CustomField>
    <fullName>OwnersManager__c</fullName>
    <formula>Owner:User.Manager_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner&apos;s Manager</label>
    <type>Text</type>
</CustomField>