UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/PAL__c.field-meta.xml
<CustomField>
    <fullName>PAL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for PAL Leads</description>
    <label>PAL</label>
    <type>Checkbox</type>
</CustomField>