UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Owner Owen</fullName>
            </value>
            <value>
                <fullName>Revenue Ralph</fullName>
            </value>
            <value>
                <fullName>Technical Trish</fullName>
            </value>
            <value>
                <fullName>Affordable Alan</fullName>
            </value>
            <value>
                <fullName>Evaluator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>