UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Phone_System__c.field-meta.xml
<CustomField>
    <fullName>Phone_System__c</fullName>
    <description>Assessment Question - How does your phone system work with your communication plan?</description>
    <label>Phone System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Old system</fullName>
            </value>
            <value>
                <fullName>Good system</fullName>
            </value>
            <value>
                <fullName>Great system</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>