UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/PhoneExtension__c.field-meta.xml
<CustomField>
    <fullName>PhoneExtension__c</fullName>
    <label>Phone Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>