UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/phoneService__c.field-meta.xml
<CustomField>
    <fullName>phoneService__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone Service</label>
    <type>Checkbox</type>
</CustomField>