UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Prc_Svc_Cd_Ds__c.field-meta.xml
<CustomField>
    <fullName>Prc_Svc_Cd_Ds__c</fullName>
    <label>Prc Svc Cd Ds</label>
    <length>100</length>
    <type>Text</type>
</CustomField>