UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Prd_Svc_Cd__c.field-meta.xml
<CustomField>
    <fullName>Prd_Svc_Cd__c</fullName>
    <label>Prd Svc Cd</label>
    <length>20</length>
    <type>Text</type>
</CustomField>