UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Preferred_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Method__c</fullName>
    <label>Preferred Contact Method</label>
    <length>55</length>
    <type>Text</type>
</CustomField>