UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Previous_Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>Previous_Lead_Owner__c</fullName>
    <label>Previous Lead Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>