UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Primary_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Primary_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field for 1st campaign associated with the lead.</description>
    <label>Primary Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads (Primary Campaign)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>