UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Total 360</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SD-WAN</fullName>
            </value>
            <value>
                <fullName>FAW UCaaS</fullName>
                <isActive>false</isActive>
                <label>FAW UCaaS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>