UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Products_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Products_of_Interest__c</fullName>
    <description>Products of Interest field from Take the Lead system/form</description>
    <label>Products of Interest</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>