UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Promo_Number_Description__c.field-meta.xml
<CustomField>
    <fullName>Promo_Number_Description__c</fullName>
    <description>Invoca Promo Number Description</description>
    <label>Promo Number Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>