UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Property_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Property_Phone_Number__c</fullName>
    <description>ClearLink Property Phone Number Field</description>
    <label>Property Phone Number</label>
    <type>Phone</type>
</CustomField>