UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Provisioning_GPON__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_GPON__c</fullName>
    <label>Provisioning GPON</label>
    <length>5</length>
    <type>Text</type>
</CustomField>