UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Public_Company__c.field-meta.xml
<CustomField>
    <fullName>Public_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public Company</label>
    <type>Checkbox</type>
</CustomField>