UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Q2_Reached_DM__c.field-meta.xml
<CustomField>
    <fullName>Q2_Reached_DM__c</fullName>
    <label>Q2: Reached DM?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contact_Made_with_targeted_account__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>