UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Q3_Engage_in_DM_dialogue__c.field-meta.xml
<CustomField>
    <fullName>Q3_Engage_in_DM_dialogue__c</fullName>
    <label>Q3: Engage in DM dialogue</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Q2_Reached_DM__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>