UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Q5_Outcome_with_non_DM__c.field-meta.xml
<CustomField>
    <fullName>Q5_Outcome_with_non_DM__c</fullName>
    <label>Q5: Outcome with non-DM?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Q2_Reached_DM__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DM Unavailable</fullName>
            </value>
            <value>
                <fullName>GK Scheduled Call Back</fullName>
            </value>
            <value>
                <fullName>Invalid Appointment</fullName>
            </value>
            <value>
                <fullName>No longer able to reach DM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>