UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Qualified_Date__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Date__c</fullName>
    <formula>If(ISPICKVAL(Status, &quot;Qualified&quot;), NOW(),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qualified Date</label>
    <type>DateTime</type>
</CustomField>