UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/RAD_Conago_Present__c.field-meta.xml
<CustomField>
    <fullName>RAD_Conago_Present__c</fullName>
    <label>RAD-Canogo Present</label>
    <length>10</length>
    <type>Text</type>
</CustomField>