UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Ranking__c.field-meta.xml
<CustomField>
    <fullName>Ranking__c</fullName>
    <description>OTM Ranking</description>
    <label>Ranking</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>