UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Reason_engage_in_DM_dialogue__c.field-meta.xml
<CustomField>
    <fullName>Reason_engage_in_DM_dialogue__c</fullName>
    <label>Reason not engaged in DM dialogue</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Q3_Engage_in_DM_dialogue__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DM Confirmed - Appt Set</fullName>
            </value>
            <value>
                <fullName>Hang up - DM Irate</fullName>
            </value>
            <value>
                <fullName>Covid - Appointment Set</fullName>
            </value>
            <value>
                <fullName>Not Interested in Frontier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>