UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Reason_For_Call__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Call__c</fullName>
    <label>Reason For Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bill Inquiry/Payment</fullName>
            </value>
            <value>
                <fullName>Cancel/Disconnect Svc</fullName>
            </value>
            <value>
                <fullName>Dead Air / Test Call</fullName>
            </value>
            <value>
                <fullName>Misdirect - Mid Mkt/Enterprise</fullName>
            </value>
            <value>
                <fullName>Misdirect - Resi</fullName>
            </value>
            <value>
                <fullName>Misdirect - Repair/TSO</fullName>
            </value>
            <value>
                <fullName>Misdirect - All Other</fullName>
            </value>
            <value>
                <fullName>Move Existing Svc</fullName>
            </value>
            <value>
                <fullName>Order New Service</fullName>
            </value>
            <value>
                <fullName>Pending Order Change/Inquiry</fullName>
            </value>
            <value>
                <fullName>Remove Existing Products</fullName>
            </value>
            <value>
                <fullName>Suspend/Restore Svc</fullName>
            </value>
            <value>
                <fullName>Where&apos;s My Tech</fullName>
            </value>
            <value>
                <fullName>Add Products to Existing Acct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>